# graphos

./: .gitignore  Cargo.toml
files/: graphos.json  test.json
src/: main.rs  persist.rs  runtime.rs
src/models/: graph_models.rs  mod.rs  node_types.rs
src/runtime/: loader_agent.rs  mod.rs  persist.rs
