[package]
name = "graphos"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
petgraph = { version = "0.8.2", features = ["serde-1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = "0.5"
rand = "0.8"
